--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +13,19 @@
     <link rel="stylesheet" href="./css/common.css">
 </head>
 <body>
-
+    <h2 class="page-subtitle">
+        GomCoder
+    </h2>
+    <h1 class="page-title">
+        내 안에 숨어 있는<br>
+        직업캐 찾기!
+    </h1>
+    <img class="character"  src="./images/main_character.png" alt="캐릭터">
+    <a class="btn btn-orange" href="/questions.httml">
+        본캐 찾으러 GO!
+    </a>
+    <div class="btn btn-green btn-small">
+        주변에 알리기
+    </div>
 </body>
-
 </html>
