--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" as="style" crossorigin
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <script defer src="./js/share.js"></script>
 </head>
 <body>
     <h2 class="page-subtitle">
@@ -24,7 +26,7 @@
     <a class="btn btn-orange" href="/questions.httml">
         본캐 찾으러 GO!
     </a>
-    <div class="btn btn-green btn-small">
+    <div class="btn btn-green btn-small share-or-copy">
         주변에 알리기
     </div>
 </body>
