--- a/questions.html
+++ b/questions.html
@@ -11,23 +11,21 @@
     <link rel="stylesheet" as="style" crossorigin
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
     <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/home.css">
-    <script defer src="./js/share.js"></script>
+    <link rel="stylesheet" href="./css/questions.css">
+    <script type="module" defer src="./js/questions.js"></script>
 </head>
 <body>
-    <h2 class="page-subtitle">
-        GomCoder
-    </h2>
-    <h1 class="page-title">
-        내 안에 숨어 있는<br>
-        직업캐 찾기!
-    </h1>
-    <img class="character"  src="./images/main_character.png" alt="캐릭터">
-    <a class="btn btn-orange" href="/questions.html">
-        본캐 찾으러 GO!
-    </a>
-    <div class="btn btn-green btn-small share-or-copy">
-        주변에 알리기
+    <!-- 프로그래스 바 -->
+    <div class="progress">
+        <div class="value"></div>
+    </div>
+    <!-- 질문 박스 -->
+    <div class="question-box">
+        <div class="number"></div>
+        <div class="question"></div>
+        <!-- 답변 버튼 -->
+        <div class="btn btn-grey choice choice1"></div>
+        <div class="btn btn-grey choice choice2"></div>
     </div>
 </body>
 </html>
