--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:site_name" content="내숨캐" />
     <meta property="og:title" content="내 안에 숨어있는 직업캐 찾기!" />
     <meta property="og:description" content="누구나 찰떡인 직업이 있어요! 내 안에 숨어있는 직업캐를 찾아보세요!" />
-    <meta property="og:image" content="/images/thumbnail.jpg" />
+    <meta property="og:image" content="./images/thumbnail.jpg" />
     <meta property="og:url" content="https://prismatic-monstera-4c9d6a.netlify.app/" />
 
     <!-- Twitter Cards -->
@@ -18,7 +18,7 @@
     <meta property="twitter:site" content="내숨캐" />
     <meta property="twitter:title" content="내 안에 숨어있는 직업캐 찾기!" />
     <meta property="twitter:description" content="누구나 찰떡인 직업이 있어요! 내 안에 숨어있는 직업캐를 찾아보세요!" />
-    <meta property="twitter:image" content="/images/thumbnail.jpg" />
+    <meta property="twitter:image" content="./images/thumbnail.jpg" />
     <meta property="twitter:url" content="https://prismatic-monstera-4c9d6a.netlify.app/" />
 
     <title>내 안에 숨어 있는 직업캐 찾기!</title>
@@ -40,7 +40,7 @@
         직업캐 찾기!
     </h1>
     <img class="character" src="./images/main_character.png" alt="캐릭터">
-    <a class="btn btn-orange" href="/questions.html">
+    <a class="btn btn-orange" href="./questions.html">
         본캐 찾으러 GO!
     </a>
     <div class="btn btn-green btn-small share-or-copy">
